[gd_scene load_steps=4 format=3 uid="uid://cwovcb4wvncte"]

[ext_resource type="Script" uid="uid://dtbjn1ykmdyet" path="res://scenes/ui/outcome_panel.gd" id="1_kk03d"]

[sub_resource type="SystemFont" id="SystemFont_kk03d"]
font_names = PackedStringArray("Arial Black")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_03hdr"]
font_size = 19

[node name="OutcomePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kk03d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ResultTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0.698039, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_kk03d")
theme_override_font_sizes/font_size = 38
text = "Success!"
horizontal_alignment = 1

[node name="FlavorText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutcomesTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Outcomes"
label_settings = SubResource("LabelSettings_03hdr")
vertical_alignment = 2

[node name="OutcomesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RollBreakdownText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
vertical_alignment = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 8
text = "Next"
